--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
+    "materialize-css": "^0.97.7",
     "run-sequence": "^1.2.2"
   }
 }
